--- a/styles.css
+++ b/styles.css
@@ -118,7 +118,7 @@ body {
   height: 50px;
   width: 200px;
   right: 15px;
-  bottom: 99px;
+  bottom: 100px;
   background: linear-gradient(45deg, #30eccd, #0ae69c, #0ce43b, #0ae0e7);
   border-radius: 0% 0% 10% 10% / 70% 70% 90% 90%;
   transform-origin: bottom center;
@@ -208,11 +208,24 @@ body {
   animation: floatUpDown  3s infinite linear alternate; /* Add floating effect */
 }
 
-/* Base part (inside the drink) */
-.straw-base {
+/* Base part */
+.straw-base-dry {
+  position: relative;
+  left: 10px;
   width: 10px;
-  height: 120px;
+  height: 40px;
   background: linear-gradient(90deg, #222, #000);
+  border-radius: 5px;
+  transform: rotate(10deg);
+}
+
+/* (inside the drink)  */
+.straw-base-liquid {
+  position: relative;
+  right: 3px;
+  width: 10px;
+  height: 80px;
+  background: linear-gradient(90deg, #22222200, #0000006b);
   border-radius: 5px;
   transform: rotate(10deg);
 }
@@ -226,8 +239,8 @@ body {
   border-radius: 5px;
   transform: rotate(30deg);
   position: relative;
-  top: -133px;
-  right: -14px;
+  top: -135px;
+  right: -18px;
 }
 
 /* Top part (goes to the right) */
@@ -237,8 +250,8 @@ body {
   background: linear-gradient(90deg, #222, #000);
   border-radius: 5px;
   position: relative;
-  top: -149px;
-  left: 32px;
+  top: -154px;
+  left: 36px;
   transform: rotate(13deg);
 }
 
@@ -310,20 +323,24 @@ body {
   position: absolute;
   width: 18px;
   height: 18px;
-  background: rgba(255, 255, 255, 0.7);
-  border: 1px solid rgba(255, 255, 255, 0.9);
+  background: linear-gradient(45deg, rgb(245 218 218), rgb(237 218 218 / 22%), rgb(237 218 218 / 72%), hsla(0, 0%, 100%, 1));  border: 1px solid rgba(255, 255, 255, 0.9);
   border-radius: 3px;
   box-shadow: 
     inset 0 0 8px rgba(255, 255, 255, 0.6),
     0 0 4px rgba(255, 255, 255, 0.3);
   transform: rotate(15deg);
   z-index: 1;
-  animation: floatUpDown  3s infinite linear alternate,  float-ice 3s infinite ease-in-out;
+  animation: floatUpDown  3s infinite linear alternate,  float-ice 3s infinite ease-in-out, colorShift-ice 6s infinite linear;
 }
 
 @keyframes float-ice {
   0%, 100% { transform: rotate(55deg) translateY(5px); }
   50% { transform: rotate(15deg) translateY(10px); }
+}
+
+@keyframes colorShift-ice {
+  0% { filter: hue-rotate(0deg); }
+  100% { filter: hue-rotate(360deg); }
 }
 
 
